License Keys now number instead of boolean
The number associated with the variant is the number of license
keys which are to be distributed as part of the mail.

Change-Id: Idd1f339f7745266bd2a6574bf55ca93586768b14

--- a/app/views/spree/email_delivery_mailer/send_license_keys.text.erb
+++ b/app/views/spree/email_delivery_mailer/send_license_keys.text.erb
@@ -1,5 +1,7 @@
 Here are the license keys for the software you ordered.
 
 <% @inventory_units.each do |inventory_unit| %>
-  <%= inventory_unit.variant.product.name %>: <%= inventory_unit.license_key.license_key %>
+  <% inventory_unit.license_keys.each do |license_key| %>
+    <%= inventory_unit.variant.product.name %>: <%= license_key.license_key %>
+  <% end %>
 <% end %>
