Added a view test for my mailer.
Change-Id: Ifb0e066041e9f48aad1300c598eed9c5ac24dc04

--- a/app/views/spree/email_delivery_mailer/send_license_keys.text.erb
+++ b/app/views/spree/email_delivery_mailer/send_license_keys.text.erb
@@ -2,6 +2,6 @@ Here are the license keys for the software you ordered.
 
 <% @inventory_units.each do |inventory_unit| %>
   <% inventory_unit.license_keys.each do |license_key| %>
-    <%= inventory_unit.variant.product.name %>: <%= license_key.license_key %>
+    <%= inventory_unit.variant.name %>: <%= license_key.license_key %>
   <% end %>
 <% end %>
