Properly localize the e-mail.
Change-Id: Ic4503d46b269ab40f5812a55cce0a53156c3e25f

--- a/app/views/spree/email_delivery_mailer/send_license_keys.text.erb
+++ b/app/views/spree/email_delivery_mailer/send_license_keys.text.erb
@@ -1,4 +1,4 @@
-Here are the license keys for the software you ordered.
+<%= t '.title' %>
 
 <% @inventory_units.each do |inventory_unit| %>
   <% inventory_unit.license_keys.each do |license_key| %>
