Send multiple keys when needed.
This modifies the mailer to send out multiple keys for a single product
when the have multiple license key types.

Change-Id: I12c7ca6a4b7ee48b1418ee4c2eec3c8cca76fd38

--- a/app/views/spree/email_delivery_mailer/send_license_keys.text.erb
+++ b/app/views/spree/email_delivery_mailer/send_license_keys.text.erb
@@ -2,6 +2,6 @@
 
 <% @inventory_units.each do |inventory_unit| %>
   <% inventory_unit.license_keys.each do |license_key| %>
-    <%= inventory_unit.variant.name %>: <%= license_key.license_key %>
+    <%= inventory_unit.variant.name %><%= " (#{license_key.license_key_type.slug})" if license_key.license_key_type %>: <%= license_key.license_key %>
   <% end %>
 <% end %>
